--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Password Storage App</title>
-
+    <title>We1 | Simple Password Storage App</title>
+    <link rel="icon" href="../logo.png" type="image/x-icon">
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
