--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>We1 | Simple Password Storage App</title>
+    <title>We1 | Simple Password Secure Bank</title>
     <link rel="icon" href="../logo.png" type="image/x-icon">
     <!-- Bootstrap -->
     <link
@@ -301,7 +301,7 @@
     <!-- Lock Screen -->
     <div id="lockScreen" class="lock-screen">
       <div class="lock-box">
-        <h3><i class="fa fa-lock"></i> Password Storage App</h3>
+        <h3><img src="../logo.png" alt="Logo" width="32" height="32"> Password Secure Bank</h3>
         <p class="text-muted mb-3">Enter Master Password</p>
         <input id="masterInput" type="password" class="form-control mb-3" placeholder="Master Password"/>
         <input id="masterInputHint" type="text" class="form-control mb-3" placeholder="Master Hint"/>
@@ -327,7 +327,7 @@
           <div
             class="d-flex justify-content-between align-items-center flex-wrap gap-2"
           >
-            <h1><i class="fa fa-lock"></i> Password Storage App</h1>
+            <h1><img src="../logo.png" alt="Logo" width="32" height="32"> Password Secure Bank</h1>
             <div class="d-flex gap-2 flex-wrap">
               <button id="changeMasterBtn" class="btn btn-primary btn-sm">
                 <i class="fa fa-refresh"></i> Master Password
