--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -48,7 +48,7 @@
         background: var(--light-color);
         padding: 0.5rem 0;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        margin-bottom: 1.5rem;
+        margin-bottom: 0.5rem;
       }
 
       .header h1 {
@@ -72,7 +72,7 @@
 
       .lock-box {
         background: var(--light-color);
-        padding: 2rem;
+        padding: 1rem;
         border-radius: 4px;
         width: 90%;
         max-width: 400px;
@@ -89,7 +89,7 @@
         padding: 0.5rem;
         border-radius: 4px;
         box-shadow: 1px 2px 20px 0px rgba(0, 0, 0, 0.1);
-        margin-bottom: 1.5rem;
+        margin-bottom: 0.5rem;
       }
 
       .form-control,
@@ -192,7 +192,7 @@
       .folder-list {
         background: var(--light-color);
         border-radius: 4px;
-        padding: 1rem;
+        padding: 0.3rem;
         box-shadow: 1px 2px 20px 0px rgba(0, 0, 0, 0.1);
       }
 
@@ -205,6 +205,8 @@
         align-items: center;
         gap: 0.5rem;
         background: #f9fafb;
+        border-bottom-left-radius: 0px;
+        border-top-left-radius: 0px;
       }
 
       .folder-item:hover {
@@ -214,19 +216,21 @@
       .folder-item.active {
         background: #2563eb;
         color: var(--light-color);
+        border-left: 7px solid #00bdff82;
       }
 
       .folder-badge {
         width: 10px;
         height: 10px;
         border-radius: 50%;
+        border: 2px solid white;
       }
 
       .controls {
         display: flex;
         gap: 1rem;
         align-items: center;
-        margin-bottom: 1rem;
+        margin-bottom: 0.3rem;
         justify-content: flex-end;
       }
 
@@ -307,10 +311,10 @@
         <input id="masterInputHint" type="text" class="form-control mb-3" placeholder="Master Hint"/>
         <div class="d-flex gap-2">
           <button id="unlockBtn" class="btn btn-primary flex-fill">
-            Unlock
+            Unlock Master <i class="fa fa-key" aria-hidden="true"></i> 
           </button>
           <button id="setBtn" class="btn btn-success flex-fill">
-            Create Master
+            Create Master  <i class="fa fa-key" aria-hidden="true"></i>
           </button>
           <button class="btn btn-danger btn-sm" id="ClearVaultBtn">
             <i class="fa fa-eraser"></i>
@@ -327,7 +331,7 @@
           <div
             class="d-flex justify-content-between align-items-center flex-wrap gap-2"
           >
-            <h1><img src="../logo.png" alt="Logo" width="32" height="32"> Password Secure Bank</h1>
+            <h1><img src="../logo.png" alt="Logo" width="32" height="32" style="background: #0138aed1;border: 1px solid;border-radius: 4px;"> Password Secure Bank</h1>
             <div class="d-flex gap-2 flex-wrap">
               <button id="changeMasterBtn" class="btn btn-primary btn-sm">
                 <i class="fa fa-refresh"></i> Master Password
@@ -421,7 +425,7 @@
                       class="btn btn-outline-secondary"
                       title="Website"
                       erasecontextfor="site"
-                      style="color: #eb2525"
+                      style="border: 3px dotted #ff0000c4;"
                       ><i class="fa fa-cloud"></i
                     ></span>
                     <input
@@ -466,7 +470,7 @@
                       class="btn btn-outline-secondary"
                       title="Username"
                       erasecontextfor="username"
-                      style="color: #eb2525"
+                      style="border: 3px dotted #ff0000c4;"
                       ><i class="fa fa-user"></i
                     ></span>
                     <input
@@ -572,7 +576,7 @@
                   </div>
                 </div>
                 <div class="col-md-2">
-                  <button id="saveBtn" class="btn btn-primary">Save</button>
+                  <button id="saveBtn" class="btn btn-primary"><i class="fa fa-save"></i> Entry</button>
                   <button id="clearBtn" class="btn btn-secondary ms-2">Clear</button>
                 </div>
               </div>
@@ -598,7 +602,7 @@
                 class="form-select"
                 style="max-width: 150px"
               >
-                <option value="">--Sort By Date--</option>
+                <option value="">Sort By Date</option>
                 <option value="new">Newest First</option>
                 <option value="old">Oldest First</option>
               </select>
