--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -173,9 +173,10 @@
 
       .table thead th {
         padding: 0.75rem 0.5rem;
-        font-weight: 500;
+        font-weight: 700;
         font-size: 0.875rem;
         border: none;
+        color: blue;
       }
 
       .table tbody td {
