--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -426,14 +426,13 @@
                       class="btn btn-outline-secondary"
                       title="Website"
                       erasecontextfor="site"
-                      style="border: 3px dotted #ff0000c4;"
                       ><i class="fa fa-cloud"></i
                     ></span>
                     <input
                       id="site"
                       list="siteList"
                       class="form-control"
-                      placeholder="Website Name"
+                      placeholder="Website Name *"
                       erasecontenttriggerfrom="site"
                     />
                   </div>
@@ -471,13 +470,12 @@
                       class="btn btn-outline-secondary"
                       title="Username"
                       erasecontextfor="username"
-                      style="border: 3px dotted #ff0000c4;"
                       ><i class="fa fa-user"></i
                     ></span>
                     <input
                       id="username"
                       class="form-control"
-                      placeholder="Username"
+                      placeholder="Username *"
                       erasecontenttriggerfrom="username"
                     />
                   </div>
