--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -1127,7 +1127,7 @@
             <td>${escapeHtml(it.site)}</td>
             <td>${
               it.url
-                ? `<a href="${escapeHtml(it.url)}" target="_blank">Link</a>`
+                ? `<a href="${escapeHtml(it.url)}" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>`
                 : "-"
             }</td>
             <td>${escapeHtml(it.username)}</td>
