--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -377,7 +377,7 @@
       <div class="container-fluid">
         <div class="row">
           <!-- Folders Sidebar -->
-          <div class="col-md-2">
+          <div class="col-md-2 p-1">
             <div class="folder-list">
               <div
                 class="d-flex justify-content-between align-items-center mb-2"
@@ -415,7 +415,7 @@
           </div>
 
           <!-- Main Content -->
-          <div class="col-md-10">
+          <div class="col-md-10 p-1">
             <!-- Add Entry Form -->
             <div class="form-section">
               <div class="row g-2">
