--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -337,16 +337,16 @@
               <button id="changeMasterBtn" class="btn btn-primary btn-sm">
                 <i class="fa fa-refresh"></i> Master Password
               </button>
-              <!-- <button id="exportBtn" class="btn btn-success btn-sm">
+              <button id="exportBtn" class="btn btn-success btn-sm hidden">
                 <i class="fa fa-download"></i> Export
-              </button> -->
+              </button>
               <button id="exportBtn2" class="btn btn-success btn-sm">
                 <i class="fa fa-download"></i> Export 
               </button>
-              <!-- <label class="btn btn-info btn-sm mb-0">
+              <label class="btn btn-info btn-sm mb-0 hidden">
                 <i class="fa fa-upload"></i> Import
                 <input type="file" id="importFile" hidden accept=".enc" />
-              </label> -->
+              </label>
               <label class="btn btn-info btn-sm mb-0">
                 <i class="fa fa-upload"></i> Import
                 <input type="file" id="importFile2" hidden accept="" />
