--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -180,10 +180,11 @@
       }
 
       .table tbody td {
-        padding: 0.75rem 0.5rem;
+        padding: 0 0.5rem;
         vertical-align: middle;
         border-top: 1px solid #e5e7eb;
         font-size: 0.875rem;
+        border-width: 0.1px;
       }
 
       .table tbody tr:hover {
