--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -2171,6 +2171,7 @@
       if (document.readyState === "loading") {
         document.addEventListener("DOMContentLoaded", initApp);
       } else {
+        document.getElementById('masterInput').focus();
         initApp();
       }
 
