--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -538,7 +538,7 @@
                       class="btn btn-outline-secondary"
                       title="Secret Hint"
                       erasecontextfor="secrethint"
-                      ><i class="fa fa-sticky-note"></i
+                      ><i class="fa fa-question-circle"></i
                     ></span>
                     <input
                       id="secrethint"
