--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -409,6 +409,10 @@
                 </div>
               </div>
             </div>
+            <div>
+              <textarea id="importText" placeholder="Paste backup JSON here..." style="width:100%;height:200px;"></textarea>
+              <button id="importTextBtn" class="btn btn-primary">Import From Text</button>
+            </div>
           </div>
 
           <!-- Main Content -->
@@ -1615,11 +1619,15 @@
             },
           };
 
+          const jsonstrigify = JSON.stringify(plainTextData, null, 2);
+
+           navigator.clipboard.writeText(jsonstrigify);
+
           const folderName =
             prompt("Enter file name (leave blank for default):") ||
             "passwords_backup";
 
-          const blob = new Blob([JSON.stringify(plainTextData, null, 2)], {
+          const blob = new Blob([jsonstrigify], {
             type: "application/json",
           });
           const a = document.createElement("a");
@@ -1667,7 +1675,10 @@
             },
           };
 
-          const blob = new Blob([JSON.stringify(exportData)], {
+          const jsonstrigify = JSON.stringify(exportData);
+          navigator.clipboard.writeText(jsonstrigify);
+
+          const blob = new Blob([jsonstrigify], {
             type: "application/json",
           });
           const a = document.createElement("a");
@@ -1697,7 +1708,12 @@
           exportDate: new Date().toISOString(),
         };
 
-        const blob = new Blob([JSON.stringify(exportData)], {
+
+        const jsonstrigify = JSON.stringify(exportData);
+        debugger
+        navigator.clipboard.writeText(jsonstrigify);
+
+        const blob = new Blob([jsonstrigify], {
           type: "application/json",
         });
         const a = document.createElement("a");
@@ -1805,6 +1821,7 @@
         reader.onload = function (e2) {
           try {
             const importData = JSON.parse(e2.target.result);
+            console.log(importData);
 
             // Check export type
             if (importData.exportType === "PLAIN_TEXT_BACKUP") {
@@ -2051,6 +2068,259 @@
         };
         reader.readAsText(f);
         this.value = "";
+      }; 
+
+
+      document.getElementById("importTextBtn").onclick = function () {
+        const text = document.getElementById("importText").value.trim();
+        if (!text) return alert("Paste backup JSON first!");
+
+        try {
+          const importData = JSON.parse(text);
+          // Check export type
+            if (importData.exportType === "PLAIN_TEXT_BACKUP") {
+              // ============================================
+              // IMPORTING PLAIN TEXT BACKUP
+              // ============================================
+
+              if (
+                !confirm(
+                  `This is a PLAIN TEXT backup with ${importData.totalPasswords} passwords.\n\nImport into current vault?\n\nNote: You must be logged in first!`
+                )
+              ) {
+                return;
+              }
+
+              if (!derivedKey) {
+                return alert(
+                  "Please unlock your vault first before importing!"
+                );
+              }
+
+              const arr = readVaultArray();
+              let imported = 0;
+              let skipped = 0;
+              let reEncrypted = 0;
+
+              importData.passwords.forEach((item) => {
+                // Check if already exists
+                const exists = arr.find(
+                  (e) => e.site === item.website && e.username === item.username
+                );
+
+                if (exists) {
+                  const overwrite = confirm(
+                    `"${item.website}" (${item.username}) already exists.\n\nOverwrite it?`
+                  );
+                  if (!overwrite) {
+                    skipped++;
+                    return;
+                  }
+                  // Remove old entry
+                  const idx = arr.indexOf(exists);
+                  arr.splice(idx, 1);
+                }
+
+                let password = null;
+                let secret = null;
+                let encoded = null;
+
+                // Handle different password statuses
+                if (
+                  item.passwordStatus === "encrypted" &&
+                  item.encodedPassword
+                ) {
+                  // Password is still encrypted
+                  const askSecret = confirm(
+                    `Password for "${item.website}" is encrypted.\n\nDo you want to enter the secret code now?\n(Click Cancel to keep it encrypted)`
+                  );
+
+                  if (askSecret) {
+                    const secretCode = prompt(
+                      `Enter secret code for "${item.website}":`
+                    );
+                    if (secretCode) {
+                      try {
+                        const decrypted = CryptoJS.AES.decrypt(
+                          item.encodedPassword,
+                          secretCode
+                        ).toString(CryptoJS.enc.Utf8);
+                        if (decrypted) {
+                          password = decrypted;
+                          secret = secretCode;
+                          reEncrypted++;
+                        } else {
+                          // Keep encrypted
+                          encoded = item.encodedPassword;
+                        }
+                      } catch (err) {
+                        alert(
+                          `Wrong secret for "${item.website}". Keeping it encrypted.`
+                        );
+                        encoded = item.encodedPassword;
+                      }
+                    } else {
+                      encoded = item.encodedPassword;
+                    }
+                  } else {
+                    encoded = item.encodedPassword;
+                  }
+                } else if (
+                  item.password &&
+                  item.password !== "[ENCRYPTED - See encodedPassword field]"
+                ) {
+                  // Plain text password
+                  password = item.password;
+                  secret = prompt(
+                    `Set a secret code for "${item.website}" (required):`
+                  );
+                  if (!secret) {
+                    alert(
+                      `Skipping "${item.website}" - secret code is required`
+                    );
+                    skipped++;
+                    return;
+                  }
+                } else {
+                  alert(
+                    `Skipping "${item.website}" - no password data available`
+                  );
+                  skipped++;
+                  return;
+                }
+
+                // Find or create folder
+                let folderId = "other";
+                if (item.category) {
+                  const folder = folders.find(
+                    (f) => f.name.toLowerCase() === item.category.toLowerCase()
+                  );
+                  if (folder) {
+                    folderId = folder.id;
+                  } else {
+                    // Create new folder
+                    const newFolderId = uid();
+                    folders.push({
+                      id: newFolderId,
+                      name: item.category,
+                      color:
+                        "#" + Math.floor(Math.random() * 16777215).toString(16),
+                    });
+                    folderId = newFolderId;
+                  }
+                }
+
+                // Add to vault
+                arr.push({
+                  site: item.website,
+                  url: item.url || "",
+                  username: item.username,
+                  password: password,
+                  secret: secret,
+                  encoded: encoded,
+                  folder: folderId,
+                  secrethint: item.secrethint || "",
+                  updated: now(),
+                });
+
+                imported++;
+              });
+
+              // Save everything
+              writeVaultArray(arr);
+              saveJSON(LS_FOLDER_LIST_KEY, folders);
+              renderFolders();
+              loadEntries(1);
+
+              alert(
+                `✅ Import completed!\n\n✓ Imported: ${imported}\n✓ Re-encrypted: ${reEncrypted}\n✗ Skipped: ${skipped}`
+              );
+            } else if (
+              importData.exportType === "ENCRYPTED_BACKUP" ||
+              importData.vault
+            ) {
+              // ============================================
+              // IMPORTING ENCRYPTED BACKUP
+              // ============================================
+
+              if (importData.vault && importData.salt) {
+                // New format - has salt included
+                const ask = prompt(
+                  "Enter the master password used to encrypt this backup:"
+                );
+                if (!ask) return alert("Import cancelled");
+
+                const keyHex = deriveKeyHex(ask, importData.salt);
+
+                try {
+                  const dec = decryptVault(importData.vault, keyHex);
+                  const vaultData = JSON.parse(dec); // Validate
+
+                  const overwriteAll = confirm(
+                    `This backup contains ${vaultData.length} passwords.\n\nDo you want to REPLACE your entire current vault?\n\nOK = Replace all\nCancel = Merge with current`
+                  );
+
+                  if (overwriteAll) {
+                    // Replace everything
+                    localStorage.setItem(LS_VALUT_ENC_KEY, importData.vault);
+                    localStorage.setItem(LS_VALUT_SALT_KEY, importData.salt);
+                    if (importData.folders) {
+                      localStorage.setItem(LS_FOLDER_LIST_KEY, importData.folders);
+                    }
+
+                    derivedKey = keyHex;
+                    folders = loadJSON(LS_FOLDER_LIST_KEY, folders);
+
+                    alert(
+                      `✅ Vault replaced successfully!\n\nRestored ${vaultData.length} passwords.`
+                    );
+                  } else {
+                    // Merge with current
+                    if (!derivedKey) {
+                      return alert(
+                        "Please unlock your current vault first to merge!"
+                      );
+                    }
+
+                    const currentArr = readVaultArray();
+                    let merged = 0;
+                    let duplicates = 0;
+
+                    vaultData.forEach((item) => {
+                      const exists = currentArr.find(
+                        (e) =>
+                          e.site === item.site && e.username === item.username
+                      );
+
+                      if (!exists) {
+                        currentArr.push(item);
+                        merged++;
+                      } else {
+                        duplicates++;
+                      }
+                    });
+
+                    writeVaultArray(currentArr);
+
+                    alert(
+                      `✅ Merge completed!\n\n✓ Added: ${merged}\n✗ Duplicates skipped: ${duplicates}`
+                    );
+                  }
+
+                  renderFolders();
+                  loadEntries(1);
+                } catch (err) {
+                  alert("Import failed: Wrong master password!");
+                }
+              }
+            } else {
+              alert("Unknown backup format. Cannot import.");
+            }
+        } catch {
+          alert("Invalid JSON!");
+        }
+        document.querySelector('#importText').value = '';
+
       };
 
       /* =============== SEARCH/SORT/PAGINATION =============== */
